--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ npm-debug.log
 /config/*.secret.exs
 
 /scorm_packages/**/node_modules
+/scorm_packages/quiz/src/config.js
+/scorm_packages/quiz/dist/*
