--- a/scorm_packages/quiz/package.json
+++ b/scorm_packages/quiz/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "npx webpack --mode production",
     "start": "npx webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "npm run webpack && cd dist && zip quiz.zip *.html *.js *.css *.xml"
+    "re:build": "bsb -make-world -clean-world",
+    "re:watch": "bsb -make-world -clean-world -w",
+    "re:clean": "bsb -clean-world",
+    "build": "cd dist && zip quiz.zip *.html *.js *.css *.xml"
   },
   "repository": {
     "type": "git",
@@ -24,17 +27,16 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.85.0",
+    "bs-platform": "^7.0.1",
+    "moduleserve": "^0.9.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "date-fns": "^1.30.1",
-    "ramda": "^0.26.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "reason-react": ">=0.7.0"
   },
   "babel": {
     "presets": [
